# indracore-parachain

./: Cargo.toml
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  service.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: init.sh
