[package]
name = "kumandra-collator"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "kumandra-collator"
path = "src/main.rs"

[dependencies]
derive_more = "0.15.0"
exit-future = "0.1.4"
futures = { version = "0.3.1", features = ["compat"] }
log = "0.4.8"
parking_lot = "0.9.0"
trie-root = "0.15.2"
codec = { package = "parity-scale-codec", version = "2.0.0" }
structopt = "0.3.3"
serde = { version = "1.0.101", features = ["derive"] }
hex-literal = "0.2.1"
# RPC related dependencies
jsonrpc-core = "15.1.0"

# Substrate dependencies
sp-runtime = { git = "https://github.com/selendra/substrate", default-features = false, branch = "master" }
sp-io = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-core = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-inherents = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-consensus = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-session = { git = "https://github.com/selendra/substrate", branch = "master" }
sc-consensus = { git = "https://github.com/selendra/substrate", branch = "master" }
sc-cli = { git = "https://github.com/selendra/substrate", branch = "master" }
sc-client-api = { git = "https://github.com/selendra/substrate", branch = "master" }
sc-executor = { git = "https://github.com/selendra/substrate", branch = "master" }
sc-service = { git = "https://github.com/selendra/substrate", branch = "master" }
sc-telemetry = { git = "https://github.com/selendra/substrate", branch = "master" }
sc-transaction-pool = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-transaction-pool = { git = "https://github.com/selendra/substrate", branch = "master" }
sc-network = { git = "https://github.com/selendra/substrate", branch = "master" }
sc-basic-authorship = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-timestamp = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-block-builder = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-trie = { git = "https://github.com/selendra/substrate", branch = "master" }
sc-finality-grandpa = { git = "https://github.com/selendra/substrate", branch = "master" }
sc-chain-spec = { git = "https://github.com/selendra/substrate", branch = "master" }
sc-rpc = { git = "https://github.com/selendra/substrate", branch = "master" }
sc-tracing = { git = "https://github.com/selendra/substrate", branch = "master" }
sp-offchain = { git = "https://github.com/selendra/substrate", branch = "master" }

# Parachain dependencies
parachain-runtime = { package = "kumandra-parachain-runtime", path = "../runtime" }
kumandra-parachain-primitives = { path = "../primitives" }

# Cumulus dependencies
cumulus-cli = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-dev" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-dev" }
cumulus-client-collator = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-dev" }
cumulus-client-service = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-dev" }
cumulus-client-network = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-dev" }
cumulus-primitives-core = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-dev" }

# Indracore dependencies
indracore-primitives = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-dev" }
indracore-service = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-dev" }
indracore-cli = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-dev" }
indracore-parachain = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-dev" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/selendra/substrate", branch = "master" }
