[package]
name = "kumandra-collator"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "kumandra-collator"
path = "src/main.rs"

[dependencies]
derive_more = "0.15.0"
exit-future = "0.1.4"
futures = { version = "0.3.1", features = ["compat"] }
log = "0.4.8"
parking_lot = "0.9.0"
trie-root = "0.15.2"
codec = { package = "parity-scale-codec", version = "2.0.0" }
structopt = "0.3.3"
serde = { version = "1.0.101", features = ["derive"] }
hex-literal = "0.2.1"
# RPC related dependencies
jsonrpc-core = "15.1.0"

# Substrate dependencies
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
sp-io = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-core = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-inherents = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-consensus = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-session = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-consensus = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-cli = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-client-api = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-executor = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-service = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-telemetry = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-transaction-pool = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-transaction-pool = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-network = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-basic-authorship = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-timestamp = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-blockchain = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-block-builder = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-trie = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-finality-grandpa = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-chain-spec = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-rpc = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sc-tracing = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
sp-offchain = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }

# Parachain dependencies
parachain-runtime = { package = "kumandra-parachain-runtime", path = "../runtime" }
kumandra-parachain-primitives = { path = "../primitives" }

# Cumulus dependencies
cumulus-cli = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-eth" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-eth" }
cumulus-client-collator = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-eth" }
cumulus-client-service = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-eth" }
cumulus-client-network = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-eth" }
cumulus-primitives-core = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-eth" }

# Indracore dependencies
indracore-primitives = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-eth" }
indracore-service = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-eth" }
indracore-cli = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-eth" }
indracore-parachain = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-eth" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth" }
