[package]
name = "kumandra-parachain-primitives"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
sp-core = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }

[features]
default = [ "std" ]
std = [
	"sp-runtime/std",
	"sp-core/std"
]
