[package]
name = 'kumandra-parachain-runtime'
version = '0.1.0'
authors = ["Selendra <info@selendra.org>"]
edition = '2018'

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

# Substrate dependencies
sp-std = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
sp-api = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
sp-io = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
sp-version = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
sp-core = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
sp-session = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
sp-offchain = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
sp-block-builder = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
sp-transaction-pool = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
sp-inherents = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }

frame-support = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
frame-executive = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
frame-system = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
pallet-balances = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
pallet-timestamp = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
pallet-sudo = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }
pallet-transaction-payment = { git = "https://github.com/selendra/substrate", branch = "v2.0.4-eth", default-features = false }

kumandra-parachain-primitives = { path = "../primitives", default-features = false }

# Cumulus dependencies
cumulus-pallet-parachain-system = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-eth", default-features = false }
cumulus-primitives-core = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-eth", default-features = false }
cumulus-pallet-xcm-handler = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-eth", default-features = false }
parachain-info = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-eth", default-features = false }

# indracore dependencies
indracore-parachain = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-eth", default-features = false }
xcm = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-eth", default-features = false }
xcm-builder = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-eth", default-features = false }
xcm-executor = { git = "https://github.com/selendra/indracore", branch = "v0.4.0-eth", default-features = false }

[build-dependencies]
substrate-wasm-builder = "3.0.0"

[features]
default = [ "std" ]
std = [
	"codec/std",
	"serde",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"parachain-info/std",
	"kumandra-parachain-primitives/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm-handler/std",
	"cumulus-primitives-core/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
]
